network/stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: network stack for udacity project2

Parameters:
  EnvironmentName:
    Description: prefix for project resource names
    Type: String
  VpcCidrBlock:
    Description:  private CIDR block for VPC
    Type: String
  PublicSubnet1CidrBlock:
    Description: CIDR block for PublicSubnet1
    Type: String
  PublicSubnet2CidrBlock:
    Description: CIDR block for PublicSubnet2
    Type: String
  PrivateSubnet1CidrBlock:
    Description: CIDR block for PrivateSubnet1
    Type: String
  PrivateSubnet2CidrBlock:
    Description: CIDR block for PrivateSubnet2
    Type: String

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Description: VPC for UdacityProject2
    Properties: 
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsHostnames: true
      Tags: 
        - Key: Name
          Value: !Ref EnvironmentName

  IGW:
    Type: AWS::EC2::InternetGateway
    Description: Internet gateway for the UdacityProject2 VPC
    Properties: 
      Tags: 
        - Key: Name
          Value: !Ref EnvironmentName

  IGWVpcAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Description: attachment for Udacity project2 Vpc and Intenet gateway 
    Properties: 
      InternetGatewayId: !Ref IGW
      VpcId: !Ref Vpc
      
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Description: public subnet for udacity project2 VPC in AZ1
    Properties: 
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PublicSubnet1CidrBlock
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} PubSub AZ1
      VpcId: !Ref Vpc

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Description: public subnet for udacity project2 VPC in AZ2
    Properties: 
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PublicSubnet2CidrBlock
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} PubSub AZ2
      VpcId: !Ref Vpc

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Description: private subnet for udacity project2 VPC in AZ1
    Properties: 
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PrivateSubnet1CidrBlock
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} PrivSub AZ1
      VpcId: !Ref Vpc

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Description: private subnet for udacity project2 VPC in AZ2
    Properties: 
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PrivateSubnet2CidrBlock
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} PrivSub AZ2
      VpcId: !Ref Vpc

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn:  IGWVpcAttachement
    Description: elastic ip address for nat gateway in az1
    Properties: 
      Domain: vpc
      Tags: 
        - Key: Name
          Value: ${EnvironmentName} NAT AZ1

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn:  IGWVpcAttachement
    Description: elastic ip address for nat gateway in AZ2
    Properties: 
      Domain: vpc
      Tags: 
        - Key: Name
          Value: ${EnvironmentName} NAT AZ2

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Description: UdacityProject2 Natgateway in AZ1
    Properties: 
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} AZ1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Description: UdacityProject2 Natgateway in AZ2
    Properties: 
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} AZ2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Description: route table for the udacity project2 vpc public subnets
    Properties: 
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} Public
      VpcId: !Ref Vpc

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Description: route to the internet gateway
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Description: Associates the UdacityProject2 PubSub Az1 with UdacityProject2 Public route table
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Description: Associates the UdacityProject2 PubSub Az2 with UdacityProject2 Public route table
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Description: route table for the UdacityProject2 PrivSub Az1
    Properties: 
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} Private AZ1
      VpcId: !Ref Vpc

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Description: UdacityProject2 route to the natgateway in AZ1
    Properties: 
      NatGatewayId: !Ref NatGateway1
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Description: Associates the UdacityProject2 PrivSub Az1 with UdacityProject2 Private route table AZ1
    Properties: 
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Description: route table for the UdacityProject2 PrivSub AZ2
    Properties: 
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} Private AZ2
      VpcId: !Ref Vpc

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Description: UdacityProject2 route to the natgateway in AZ2
    Properties: 
      NatGatewayId: !Ref NatGateway2
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Description: Associates the UdacityProject2 PrivSub Az2 with UdacityProject2 Private route table AZ2
    Properties: 
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

Outputs:
  Vpc:
    Description: VPC ID
    Value: !Ref Vpc
    Export:
      Name: !Sub ${EnvironmentName}-VPC
  PrivateSubnets:
    Description: list of private subnets
    Value: !Join [',', [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export:
      Name: !Sub ${EnvironmentName}PrivateSubnets
  PublicSubnet1:
    Description: the id of the public subnet in AZ1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${EnvironmentName}PubSub1
  PublicSubnet2:
    Description: the id of the public subnet in AZ2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${EnvironmentName}PubSub2
  PrivateSubnet1:
    Description: the id of the private subnet in AZ1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub ${EnvironmentName}PrivSub1
  PrivateSubnet2:
    Description: the id of the private subnet in AZ2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub ${EnvironmentName}PrivSub2
